# hoon-rs

./: Cargo.toml  LSP_STATUS.md  README.md  devenv.nix  rust-toolchain.toml
.github/workflows/: vscode-extension.yml
crates/hoon-fmt/: Cargo.toml  NOTES.md
crates/hoon-fmt/src/: config.rs  lib.rs  main.rs  render.rs
crates/hoon-fmt/src/format/: atoms.rs  hoon.rs  mod.rs  runes.rs  spec.rs
crates/hoon-fmt/src/oldformat/: block.rs  doc.rs  mod.rs  mode.rs  primitives.rs  spec.rs  symbols.rs
crates/hoon-fmt/src/oldformat/hoon/: bar.rs  basic.rs  cen.rs  col.rs  dot.rs  helpers.rs  irregular.rs  ket.rs  mic.rs  misc.rs  mod.rs  sig.rs  tis.rs  wut.rs  zap.rs
crates/hoon-lsp/: Cargo.toml
crates/hoon-lsp/src/: config.rs  document_store.rs  main.rs  parser_adapter.rs  position_mapper.rs  stdlib.rs  symbol_index.rs
crates/hoon-lsp/src/backend/: hover_helpers.rs  mod.rs  navigation.rs  requests.rs  server.rs  source_lookup.rs  status.rs  tasks.rs  tests.rs  tokens.rs  value_render.rs
crates/hoon-parser/: Cargo.toml
crates/hoon-parser/src/: lib.rs  main.rs  parser_core.rs  utils.rs
crates/hoon-parser/src/ast/: hoon.rs  mod.rs
crates/hoon-parser/src/runes/: bar.rs  buc.rs  cen.rs  col.rs  dot.rs  fas.rs  ket.rs  mic.rs  mod.rs  sail.rs  sig.rs  tis.rs  wut.rs  zap.rs
editors/vscode/: .vscodeignore  LICENSE  language-configuration.json  package-lock.json  package.json
editors/vscode/src/: extension.ts
editors/vscode/syntaxes/: hoon.tmLanguage.json
