resolver = "3"

[workspace]
members = [
"crates/hoon-parser",
"crates/hoon-lsp",
"crates/hoon-fmt"
]

[workspace.package]
version = "0.1.0"
edition = "2024"


[workspace.dependencies]
chumsky = { version = "0.10" }
num-bigint = { version = "0.4.6"}
num-traits = "0.2"
sha2 = "0.10"
serde = { version = "1.0.217" }
serde_json = "1.0.104"
tokio = { version = "1.32", features = [
    "fs",
    "io-util",
    "macros",
    "net",
    "rt-multi-thread",
    "rt",
    "signal",
    "tracing",
] }
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.18", features = [
    "ansi",
    "env-filter",
    "registry",
] }
dashmap = "6.1.0"
walkdir = "2.5.0"
thiserror = "2.0.11"
tempfile = "3.3"
clap = { version = "4.4.4", features = ["derive"] }
