[package]
name = "hoon-lsp"
version = "0.1.0"
edition.workspace = true

[dependencies]
tokio = { workspace = true, features = ["io-std", "time"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tower-lsp = "0.20"
ropey = "1.6"
dashmap = { workspace = true }
parser = { package = "hoon-parser", path = "../hoon-parser" }
chumsky = { workspace = true}
serde_json = { workspace = true, features = ["arbitrary_precision"] }
walkdir = { workspace = true }

[[bin]]
name = "hoon-lsp"
path = "src/main.rs"

[dev-dependencies]
tempfile = { workspace = true }
futures = "0.3"
tower = "0.4"
